tests/ui/not_declared.fail.stderr
error[E0432]: unresolved import `crate_::y`
 --> tests/ui/src/w.rs
  |
  | use crate_::y; // doesn't depend on it
  |     ^^^^^^^^-
  |     |       |
  |     |       help: a similar name exists in the module: `x`
  |     no `y` in `w::crate_`

warning: unused import: `x`
 --> tests/ui/not_declared.fail.rs:5:18
  |
5 |     #[depends_on(x)]
  |                  ^
  |
  = note: `#[warn(unused_imports)]` on by default
